# TRINA

./: .gitignore  .pylintrc  Motion_Planning_Johnny.py  README.md  Reem_test.py  RobotMotionStateGenerator.py  Robot_visualizer.py  UIController.py  UIController_Integrated.py  UIController_reem.py  UIOutputs.data  UIRobotClient.py  UIStateReciever.py  UIStateReciever_V2.py  __init__.py  alexandria.py  client_redrun_config.json  client_trina_redrun_config.json  command_server.py  configurations.json  configurations_client.py  constant_query.py  constant_query_test.py  dump.rdb  headControlTest.py  meta.json  moduletest.py  redis.conf  redrun_config.json  simulated_gui_redrun_config.json  slowdown_test.py  start_all.sh  start_all_local.sh  start_gui.sh  start_simulated_GUI.sh  trina_2004_setup.sh  trina_logging.py  trina_redrun_config.json  trina_redrun_config.json~  trina_setup.sh
Resources/UR5e_Control_API/PyUniversalRobot-master/: .gitignore  CMakeCache.txt  CMakeLists.txt  requirements.txt  setup.py  setupPy2.py
Resources/UR5e_Control_API/PyUniversalRobot-master/src/PyUniversalRobot/control/: RobotController.py  calibration_joint_positions.txt  continuous_path_data.txt  discrete_path_data.txt  generic_with_force.py  gripper.py  path_data.txt  test.py  ur5.py  ur5_new.py  ur5_old.py
Resources/UR5e_Control_API/PyUniversalRobot-master/src/PyUniversalRobot/data/: .gitignore
Resources/UR5e_Control_API/PyUniversalRobot-master/src/PyUniversalRobot/kinematics/: accelerator.cpp  (+4 more)
Resources/UR5e_Control_API/PyUniversalRobot-master/test/: collision.py  kinematics.py
(+642 files in other folders)
